--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,266 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #ebecf0;
+  text-shadow: 1px 1px white;
+  font-family: "Times New Roman", Times, serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Nav Bar */
+.navigation {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 2rem;
+  background-color: darkgray;
+  width: 100%;
+  padding: 0.5rem 0rem;
+  font-size: 1.8rem;
+  font-weight: 500;
+  list-style-type: none;
+}
+
+.navigation a:link,
+.navigation a:visited {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #212529;
+}
+
+.navigation a:hover,
+.navigation a:active {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  transition-duration: 0.5s;
+  background-color: lightgray;
+}
+
+/* footer */
+footer {
+  padding: 1.5rem 0rem;
+  width: 100%;
+  background-color: darkgray;
+  text-align: center;
+  font-size: 1.2rem;
+  bottom: 0;
+  height: 120px;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  height: 10px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3b5998;
   color: white;
+  text-shadow: 0px 0px white;
 }
 
-.App-link {
-  color: #61dafb;
+.fa-pinterest {
+  background: #cb2027;
+  color: white;
+  text-shadow: 0px 0px white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fa-instagram {
+  background: #125688;
+  color: white;
+  text-shadow: 0px 0px white;
 }
+
+/* home page */
+.indexcontainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+  padding: 2rem;
+  margin: 0;
+  justify-items: center;
+}
+
+.indexh2 {
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.indexh3 {
+  font-size: 1.3rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.index-h3 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-right: auto;
+  margin-left: auto;
+  width: 70%;
+  font-size: 1.3rem;
+}
+
+.indexh4 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-right: auto;
+  margin-left: auto;
+  width: 70%;
+  font-size: 1.3rem;
+}
+
+.indexh5 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-right: auto;
+  margin-left: auto;
+  width: 70%;
+  font-size: 1.3rem;
+}
+
+.navigation img {
+  height: 7rem;
+  width: auto;
+}
+
+/* Hero */
+.hero-header {
+  text-align: center;
+  text-transform: uppercase;
+  /* height: 60vh; */
+  width: 100%;
+  font-size: 1.9rem;
+  /* margin-bottom: 450px; */
+}
+
+.hero-header img {
+  width: 100%;
+}
+
+/* Contacts page */
+.contact-section {
+  background: url(https://www.lacesout.net/wp-content/uploads/2016/05/air-jordan-1-on-feet-retro-high-melo-gold-black.jpg) no-repeat center;
+  background-size: cover;
+  padding: 40px 0;
+}
+
+.contact-section h1 {
+  text-align: center;
+  color: black;
+}
+
+.border {
+  width: 100px;
+  height: 10px;
+  background: black;
+  margin: 40px auto;
+}
+
+.contact-form {
+  max-width: 600px;
+  margin: auto;
+  padding: 0 10px;
+  overflow: hidden;
+}
+
+.contact-form-text {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 20px 0;
+  border: 0;
+  background: #111;
+  padding: 20px 10px;
+  outline: none;
+  color: #ddd;
+  transition: 0.5s;
+}
+
+.contact-form-text:focus {
+  box-shadow: 0 0 10px 4px #fdff8c;
+}
+
+textarea.contact-form-text {
+  resize: none;
+  height: 120px;
+}
+
+.contact-form-btn {
+  float: right;
+  border: 0;
+  background: #34495e;
+  color: #fff;
+  padding: 12px 50px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.contact-form-btn:hover {
+  background: #fdff8c;
+  color: black;
+}
+
+.productContainer {
+  display: grid;
+  grid-template-rows: repeat(3, 620px);
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1em;
+  padding: 2rem;
+  margin: 0;
+}
+
+.productsh1 {
+  text-align: center;
+  font-size: 3.6rem;
+  text-transform: uppercase;
+}
+
+.producth2 {
+  font-size: 1.3rem;
+}
+
+.producth3 {
+  font-size: 1rem;
+}
+
+.product1 {
+  padding: 1em;
+  border: 2px solid white;
+  border-radius: 20px;
+  box-shadow: 0rem 0.1rem 0.5rem #212529;
+}
+
+.productContainer a:link,
+.productContainer a:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+
+.productContainer a:hover,
+.productContainer a:active {
+  color: darkgray;
+}
+
+.product1 > img {
+  height: 300px;
+  width: 200px;
+}
+
+.resourcesimages img {
+  height: 200px;
+  width: 300px;
+}
+
+/*# sourceMappingURL=app.css.map */
