adding json info

--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,11 @@ footer {
   width: 100%;
 }
 
+.resourcesimages img {
+  height: 200px;
+  width: 300px;
+}
+
 /* Contacts page */
 .contact-section {
   background: url(https://www.lacesout.net/wp-content/uploads/2016/05/air-jordan-1-on-feet-retro-high-melo-gold-black.jpg) no-repeat center;
@@ -213,7 +218,7 @@ textarea.contact-form-text {
 
 .productContainer {
   display: grid;
-  grid-template-rows: repeat(3, 620px);
+  grid-template-rows: repeat(3, 4fr);
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1em;
   padding: 2rem;
@@ -254,8 +259,8 @@ textarea.contact-form-text {
 }
 
 .product1 > img {
-  height: 300px;
-  width: 200px;
+  height: 200px;
+  width: 300px;
 }
 
 .resourcesimages img {
