--- a/src/partials/_home.scss
+++ b/src/partials/_home.scss
@@ -1,12 +1,33 @@
 /* home page */
 .indexcontainer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1em;
-  padding: 2rem;
-  margin: 0;
-  justify-items: center;
+//   display: grid;
+//   grid-template-columns: repeat(3, 1fr);
+//   grid-gap: 1em;
+//   padding: 2rem;
+//   margin: 0;
+//   justify-items: center;
+    width: 60%;
+    align-content: center;
+    padding-left: 20%;
+ }
+
+.main-slide {
+  padding-top: 30px;
 }
+
+.carousel .slider-wrapper {
+  width: 50%;
+}
+.carousel .thumb {
+  width: 5%;
+  height: 50px;
+}
+
+.carousel {
+  text-align: center;
+}
+
+// home page text
 
 .indexh2 {
   font-size: 2rem;
@@ -67,7 +88,7 @@
 
 // img
 
-.resourcesimages img {
-  height: 200px;
-  width: 300px;
-}
+// .resourcesimages img {
+//   height: 200px;
+//   width: 300px;
+// }
