--- a/src/partials/_products.scss
+++ b/src/partials/_products.scss
@@ -44,7 +44,7 @@
   width: 300px;
 }
 
-.resourcesimages img {
-  height: 200px;
-  width: 300px;
-}
+// .resourcesimages img {
+//   height: 200px;
+//   width: 300px;
+// }
