--- a/src/partials/_shared.scss
+++ b/src/partials/_shared.scss
@@ -78,3 +78,27 @@ footer {
   color: white;
   text-shadow: 0px 0px white;
 }
+
+/* media queires */
+
+@media (max-width: 800px) {
+  .productContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .indexcontainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .navigation {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .productContainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .indexcontainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
