redesgining product page

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,3 +2,4 @@
 @import './partials/_home.scss';
 @import './partials/_contacts.scss';
 @import './partials/_products.scss';
+@import './partials/testing.scss'
