--- a/src/partials/_products.scss
+++ b/src/partials/_products.scss
@@ -1,50 +1,112 @@
-.productContainer {
+.productPage {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;   
+}
+
+main {
   display: grid;
-  grid-template-rows: repeat(3, 4fr);
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1em;
-  padding: 2rem;
-  margin: 0;
+  grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
+  grid-gap: 40px;
+  padding: 60px 0;
 }
 
-.productsh1 {
+.productsH1 {
   text-align: center;
-  font-size: 3.6rem;
-  text-transform: uppercase;
+  font-size: 50px;
+  margin: 20px;
+  padding: 0px;
 }
 
-.producth2 {
-  font-size: 1.3rem;
+.text-medium {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: white;
+  padding-left: 10px;
 }
 
-.producth3 {
-  font-size: 1rem;
+.cards {
+  grid-column: 2 / span 12;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(auto, 60px));
+  grid-gap: 40px;
 }
 
-.product1 {
-  padding: 1em;
-  border: 2px solid white;
+.card {
+  grid-column-end: span 4;
+  display: flex;
+  flex-direction: column;
+  background-color: #39393b;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.card:hover {
+  transform: translateY(-7px);
+}
+
+.card_image {
+  width: 100%;
+  padding-top: 0%;
+  overflow: hidden;
+  position: relative;
+}
+.card_image img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card_content {
+  padding: 20px;
+}
+
+.card_title {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.card_info {
+  // display: flex;
+  align-self: end;
+  align-items: center;
+}
+
+.card_price {
+  text-align: center;
+  margin-left: auto;
+  padding: 5px 20px;
+  background-color: #303032;
   border-radius: 20px;
-  box-shadow: 0rem 0.1rem 0.5rem#212529;
 }
 
-.productContainer a:link,
-.productContainer a:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: black;
+@media only screen and (max-width: 1000px) {
+  .card {
+      grid-column-end: span 6;
+  }
 }
-.productContainer a:hover,
-.productContainer a:active {
-  color: darkgray;
+@media only screen and (max-width: 700px) {
+  main {
+      grid-gap: 20px;
+  }
+  .card {
+      grid-column-end: span 12;
+  }
 }
-
-.product1 > img {
-  height: 200px;
-  width: 300px;
+@media only screen and (max-width: 500px) {
+  main {
+      grid-template-columns: 10px repeat(6, 1fr) 10px;
+      grid-gap: 10px;
+  }
+  .cards {
+      grid-column: 2 / span 6;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 20px;
+  }
+  .card {
+      grid-column-end: span 6;
+  }
 }
-
-// .resourcesimages img {
-//   height: 200px;
-//   width: 300px;
-// }
