--- a/src/partials/_shared.scss
+++ b/src/partials/_shared.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #ebecf0;
-  text-shadow: 1px 1px white;
+  // text-shadow: 1px 1px white;
   font-family: "Times New Roman", Times, serif;
 }
 
