--- a/src/partials/_home.scss
+++ b/src/partials/_home.scss
@@ -92,3 +92,12 @@
 //   height: 200px;
 //   width: 300px;
 // }
+
+@media only screen and (max-width: 450px) {
+  section {
+    display: none;
+  }
+  .kickerLogo123 {
+    display: none;
+  }
+}
