--- a/src/partials/_products.scss
+++ b/src/partials/_products.scss
@@ -83,6 +83,11 @@ main {
   border-radius: 20px;
 }
 
+.filterSelector {
+  width: 15%;
+  margin-left: 128px;
+}
+
 @media only screen and (max-width: 1000px) {
   .card {
       grid-column-end: span 6;
